--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "nodemon --exec ts-node server.ts",
+    "server:prod": "ts-node server.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.80.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.23",
     "expo-image-picker": "^17.0.8",
     "expo-router": "^3.5.24",
     "expo-sqlite": "^16.0.9",
     "expo-status-bar": "~3.0.8",
+    "express": "^5.1.0",
+    "mongodb": "^7.0.0",
+    "multer": "^2.0.2",
+    "mysql2": "^3.15.3",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
@@ -21,8 +31,14 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
+    "@types/multer": "^2.0.0",
+    "@types/pg": "^8.15.6",
     "@types/react": "~19.1.0",
     "@types/uuid": "^10.0.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
   },
   "private": true
