--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "expo": "~54.0.23",
+    "expo-constants": "~18.0.10",
     "expo-image-picker": "^17.0.8",
-    "expo-router": "^3.5.24",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.14",
     "expo-sqlite": "^16.0.9",
     "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
@@ -27,7 +29,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
+    "react-native-screens": "~4.16.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
