feat: Add server security with API key auth, rate limiting, and CORS
- Fix ts-node execution with tsconfig.server.json (CommonJS module)
- Update package.json scripts to use --project flag
- Add helmet for HTTP security headers
- Add express-rate-limit for DDoS protection
- Implement API key middleware (x-api-key header)
- Add CORS origin whitelist configuration
- Update client storage layer to send API keys
- Create comprehensive security setup guide (notes/80-security-setup.md)
- Update README and overview with security information
- Configure .env with generated API key and rate limits
- Tested: health endpoint public, materials endpoint requires auth

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Environment Configuration Template
-# Copy this to .env.local and fill in your Unraid server details
+# Copy this to .env.local (for mobile app) and .env (for server)
 
 # Database Selection (postgres | mongodb | mariadb)
 DATABASE_TYPE=postgres
@@ -24,3 +24,19 @@ POSTGRES_PASSWORD=your_password
 # Image Storage
 IMAGE_UPLOAD_URL=http://your-unraid-server.local:3001/upload
 IMAGE_BASE_URL=http://your-unraid-server.local:3001/images
+
+# Server Configuration (for server.ts)
+PORT=3001
+UPLOAD_DIR=./uploads
+
+# Security Settings
+# Generate a strong random API key: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+API_KEY=your-secure-api-key-here
+
+# CORS: Comma-separated list of allowed origins (leave empty to allow all - NOT recommended for production)
+# Example: http://localhost:8081,http://192.168.1.100:8081,https://yourdomain.com
+ALLOWED_ORIGINS=
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
