--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "server": "nodemon --exec ts-node server.ts",
-    "server:prod": "ts-node server.ts"
+    "server": "nodemon --watch src --watch server.ts --exec \"ts-node --project tsconfig.server.json\" server.ts",
+    "server:prod": "ts-node --project tsconfig.server.json server.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.80.0",
@@ -22,6 +22,8 @@
     "expo-sqlite": "^16.0.9",
     "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "mongodb": "^7.0.0",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.15.6",
     "@types/react": "~19.1.0",
