--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "uuid": "^13.0.0"
