--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
+    "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.14",
